--- a/src/index.css
+++ b/src/index.css
@@ -25,37 +25,33 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  place-items: center;
+  min-width: 320px;
   min-height: 100vh;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  color: #55585e;
-  background-color: #e1e8f0;
-  font-size: 15px;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-  text-align: center;
 }
 
 button {
-  border-radius: 8em;
+  border-radius: 8px;
+  border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #55585e;
+  background-color: #1a1a1a;
   cursor: pointer;
-  border-color: #6ed3cf;
+  transition: border-color 0.25s;
 }
 button:hover {
   border-color: #646cff;
 }
 button:focus,
 button:focus-visible {
-  outline: 4em auto -webkit-focus-ring-color;
+  outline: 4px auto -webkit-focus-ring-color;
 }
 
 @media (prefers-color-scheme: light) {
